--- a/project.ipynb
+++ b/project.ipynb
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\joaoj\\AppData\\Local\\Temp\\ipykernel_6604\\1512161642.py:13: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\joaoj\\AppData\\Local\\Temp\\ipykernel_37028\\1512161642.py:13: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  transactions = pd.read_csv(DATA_SOURCE + 'trans_dev.csv', sep=';')\n"
      ]
     },
@@ -140,7 +140,7 @@
        "4     7240       11013  930906  274740        60      4579       1"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "4            2  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
        "4      577     3687  classic    94      2   15"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
        "4          5            5    60      7    3  female"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
        "4                          1  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
        "4                      1.150649  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +943,7 @@
        "4    93      9    6  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1103,7 @@
        "4    28.69      NaN  NaN         NaN    93      1   19  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1365,7 +1365,7 @@
        "4      577     3687   classic         94           2        15        3050"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1387,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1561,7 +1561,7 @@
        "4                      1.292553  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1580,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1806,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1839,7 +1839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2019,7 +2019,7 @@
        "4                      1.292553              2244.168398  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2032,7 +2032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2050,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2105,7 +2105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2130,24 +2130,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-1  1  1  1  1  1  1  1  1  1  1  1  1 -1  1  1  1  1  1  1  1  1  1  1\n",
-      "  1  1 -1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1\n",
-      "  1  1  1  1  1  1  1  1  1  1  1  1 -1 -1  1  1  1  1]\n",
-      "0.18181818181818182\n",
-      "0.8181818181818182\n"
+      "[ 1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1 -1  1 -1  1  1\n",
+      "  1  1  1 -1 -1  1  1  1 -1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1\n",
+      "  1  1  1  1  1  1  1  1  1  1  1  1  1 -1  1 -1  1  1]\n",
+      "0.5714285714285714\n",
+      "0.36363636363636365\n",
+      "0.9122807017543859\n",
+      "0.8484848484848485\n"
      ]
     }
    ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import recall_score, accuracy_score\n",
+    "from sklearn.metrics import recall_score, accuracy_score, precision_score, f1_score\n",
     "\n",
     "# Create a Random Forest Model\n",
     "random_classifier = RandomForestClassifier(\n",
@@ -2161,8 +2163,11 @@
     "\n",
     "print(predictions)\n",
     "\n",
-    "# Check the accuracy\n",
+    "# Check precision and recall (in this case it's better), f-measure, auc\n",
+    "print(precision_score(y_test, predictions, pos_label=-1))\n",
     "print(recall_score(y_test, predictions, pos_label=-1))\n",
+    "print(f1_score(y_test, predictions))\n",
+    "# Check the accuracy (not a good metric)\n",
     "print(accuracy_score(y_test, predictions))"
    ]
   },
@@ -2175,7 +2180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2204,14 +2209,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recall:  0.0\n",
+      "0.5714285714285714\n",
+      "0.36363636363636365\n",
+      "0.9122807017543859\n",
       "0.8333333333333334\n"
      ]
     }
@@ -2220,18 +2227,23 @@
     "# SVM\n",
     "\n",
     "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import recall_score, accuracy_score, precision_score, f1_score\n",
+    "\n",
     "\n",
     "classifier = SVC()\n",
     "classifier.fit(x_train, y_train)\n",
     "y_pred = classifier.predict(x_test)\n",
     "\n",
-    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))\n",
+    "# Check precision and recall (in this case it's better), f-measure, auc\n",
+    "print(precision_score(y_test, predictions, pos_label=-1))\n",
+    "print(recall_score(y_test, predictions, pos_label=-1))\n",
+    "print(f1_score(y_test, predictions))\n",
     "print(accuracy_score(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2270,15 +2282,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recall:  0.5454545454545454\n",
-      "0.42424242424242425\n"
+      "Recall:  0.18181818181818182\n",
+      "0.6060606060606061\n"
      ]
     }
    ],
@@ -2295,7 +2307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2319,7 +2331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2343,7 +2355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2367,7 +2379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
