--- a/project.ipynb
+++ b/project.ipynb
@@ -35,14 +35,14 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 315,
+         "execution_count": 1,
          "metadata": {},
          "outputs": [
             {
                "name": "stderr",
                "output_type": "stream",
                "text": [
-                  "C:\\Users\\joaoj\\AppData\\Local\\Temp\\ipykernel_38420\\482001259.py:23: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+                  "C:\\Users\\joaoj\\AppData\\Local\\Temp\\ipykernel_7116\\482001259.py:23: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
                   "  transactions_dev = pd.read_csv(DEV_DATA_SOURCE + 'trans.csv', sep=';')\n"
                ]
             },
@@ -140,7 +140,7 @@
                      "4     7240       11013  930906  274740        60      4579       1"
                   ]
                },
-               "execution_count": 315,
+               "execution_count": 1,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -202,7 +202,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 316,
+         "execution_count": 2,
          "metadata": {},
          "outputs": [
             {
@@ -300,7 +300,7 @@
                      "4            2  "
                   ]
                },
-               "execution_count": 316,
+               "execution_count": 2,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -324,7 +324,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 317,
+         "execution_count": 3,
          "metadata": {},
          "outputs": [
             {
@@ -415,7 +415,7 @@
                      "4      577     3687  classic    94      2   15"
                   ]
                },
-               "execution_count": 317,
+               "execution_count": 3,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -438,7 +438,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 318,
+         "execution_count": 4,
          "metadata": {},
          "outputs": [
             {
@@ -529,7 +529,7 @@
                      "4          5            5    60      7    3  female"
                   ]
                },
-               "execution_count": 318,
+               "execution_count": 4,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -554,7 +554,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 319,
+         "execution_count": 5,
          "metadata": {},
          "outputs": [
             {
@@ -639,7 +639,7 @@
                      "4        5          5           3  DISPONENT                            2"
                   ]
                },
-               "execution_count": 319,
+               "execution_count": 5,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -666,7 +666,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 320,
+         "execution_count": 6,
          "metadata": {},
          "outputs": [
             {
@@ -809,7 +809,7 @@
                      "4                      1.150649  "
                   ]
                },
-               "execution_count": 320,
+               "execution_count": 6,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -831,7 +831,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 321,
+         "execution_count": 7,
          "metadata": {},
          "outputs": [
             {
@@ -947,7 +947,7 @@
                      "4    93      9    6  "
                   ]
                },
-               "execution_count": 321,
+               "execution_count": 7,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -974,7 +974,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 322,
+         "execution_count": 8,
          "metadata": {},
          "outputs": [
             {
@@ -1108,7 +1108,7 @@
                      "4    28.69      NaN  NaN         NaN    93      1   19  "
                   ]
                },
-               "execution_count": 322,
+               "execution_count": 8,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -1137,7 +1137,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 323,
+         "execution_count": 9,
          "metadata": {},
          "outputs": [
             {
@@ -1241,7 +1241,7 @@
                      "4            2              1326.053913  "
                   ]
                },
-               "execution_count": 323,
+               "execution_count": 9,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -1261,7 +1261,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 324,
+         "execution_count": 10,
          "metadata": {},
          "outputs": [
             {
@@ -1293,7 +1293,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 325,
+         "execution_count": 11,
          "metadata": {},
          "outputs": [
             {
@@ -1410,7 +1410,7 @@
                      "4            2              1326.053913                    5  "
                   ]
                },
-               "execution_count": 325,
+               "execution_count": 11,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -1439,7 +1439,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 326,
+         "execution_count": 12,
          "metadata": {},
          "outputs": [
             {
@@ -1530,7 +1530,7 @@
                      "4          5                   5    60      7    3  female"
                   ]
                },
-               "execution_count": 326,
+               "execution_count": 12,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -1552,7 +1552,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 327,
+         "execution_count": 13,
          "metadata": {},
          "outputs": [
             {
@@ -1668,7 +1668,7 @@
                      "4                   5           60             7           3        female  "
                   ]
                },
-               "execution_count": 327,
+               "execution_count": 13,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -1687,7 +1687,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 328,
+         "execution_count": 14,
          "metadata": {},
          "outputs": [
             {
@@ -1834,7 +1834,7 @@
                      "4       NaN        NaN         NaN       NaN  "
                   ]
                },
-               "execution_count": 328,
+               "execution_count": 14,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -1855,7 +1855,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 329,
+         "execution_count": 15,
          "metadata": {},
          "outputs": [
             {
@@ -2015,7 +2015,7 @@
                      "4         12         male  "
                   ]
                },
-               "execution_count": 329,
+               "execution_count": 15,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -2036,7 +2036,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 330,
+         "execution_count": 16,
          "metadata": {},
          "outputs": [
             {
@@ -2196,7 +2196,7 @@
                      "4         12         male  "
                   ]
                },
-               "execution_count": 330,
+               "execution_count": 16,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -2216,7 +2216,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 331,
+         "execution_count": 17,
          "metadata": {},
          "outputs": [
             {
@@ -2431,7 +2431,7 @@
                      "4          7         male  "
                   ]
                },
-               "execution_count": 331,
+               "execution_count": 17,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -2454,7 +2454,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 332,
+         "execution_count": 18,
          "metadata": {},
          "outputs": [],
          "source": [
@@ -2473,7 +2473,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 333,
+         "execution_count": 19,
          "metadata": {},
          "outputs": [
             {
@@ -2838,7 +2838,7 @@
                      "9          3         male  "
                   ]
                },
-               "execution_count": 333,
+               "execution_count": 19,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -2862,7 +2862,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 334,
+         "execution_count": 20,
          "metadata": {},
          "outputs": [
             {
@@ -3083,30 +3083,15 @@
                      "4          7         male           14  "
                   ]
                },
-               "execution_count": 334,
+               "execution_count": 20,
                "metadata": {},
                "output_type": "execute_result"
             }
          ],
          "source": [
-            "def extract_age(row):\n",
-            "\t(owner_year, owner_month, owner_day) = row['owner_year'], row['owner_month'], row['owner_day']\n",
-            "\t(loan_year, loan_month, loan_day) = row['year'], row['month'], row['day']\n",
-            "\towner_age = -1\n",
-            "\tif owner_year <= loan_year:\n",
-            "\t\towner_age = loan_year - owner_year\n",
-            "\t\tif owner_month == loan_month:\n",
-            "\t\t\tif owner_day > loan_day:\n",
-            "\t\t\t\towner_age -= 1\n",
-            "\t\telif owner_month > loan_month:\n",
-            "\t\t\towner_age -= 1\n",
-            "\t# if owner_age == -1:\t# just for testing (checks if birthdate is after loan)\n",
-            "\t# \tprint(\"incorrect owner_year !\")\n",
-            "\treturn owner_age\n",
-            "\n",
             "# extract owner age from loan date and owner birthdate \n",
-            "loans_dev['age_at_loan'] = loans_dev.apply(lambda row: extract_age(row), axis=1)\n",
-            "loans_comp['age_at_loan'] = loans_comp.apply(lambda row: extract_age(row), axis=1)\n",
+            "loans_dev['age_at_loan'] = loans_dev.apply(lambda row: utils.extract_age(row), axis=1)\n",
+            "loans_comp['age_at_loan'] = loans_comp.apply(lambda row: utils.extract_age(row), axis=1)\n",
             "\n",
             "loans_dev.head(5)\n"
          ]
@@ -3122,7 +3107,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 335,
+         "execution_count": 21,
          "metadata": {},
          "outputs": [
             {
@@ -3375,7 +3360,7 @@
                      "4                1       0     1  "
                   ]
                },
-               "execution_count": 335,
+               "execution_count": 21,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -3402,7 +3387,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 336,
+         "execution_count": 22,
          "metadata": {},
          "outputs": [
             {
@@ -3410,7 +3395,7 @@
                "output_type": "stream",
                "text": [
                   "(328, 26)\n",
-                  "(274, 25)\n"
+                  "(235, 25)\n"
                ]
             }
          ],
@@ -3435,20 +3420,20 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 337,
+         "execution_count": 23,
          "metadata": {},
          "outputs": [
             {
                "name": "stdout",
                "output_type": "stream",
                "text": [
-                  "Recall:  1.0\n",
-                  "Accuracy:  0.9420289855072463\n",
-                  "Precision:  1.0\n",
-                  "F-Score:  0.9375\n",
-                  "AUROC:  0.9983193277310924\n",
-                  "Dev self_confidence_score:  0.6464347826086955\n",
-                  "Competition self_confidence_score:  0.3940734463276837\n"
+                  "Recall:  0.5\n",
+                  "Accuracy:  0.8333333333333334\n",
+                  "Precision:  0.9454545454545454\n",
+                  "F-Score:  0.9043478260869566\n",
+                  "AUROC:  0.798611111111111\n",
+                  "Dev self_confidence_score:  0.4500000000000002\n",
+                  "Competition self_confidence_score:  0.36492090395480214\n"
                ]
             }
          ],
